First pass on implementation.